--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -267,7 +267,12 @@ del sistema y de la masa de la secundaria $m_2$
 	\label{ecuacionPotencialEfectivoFinal}
 \end{eqfloat}
 
-El potencial efectivo en la \refequation{ecuacionPotencialEfectivoFinal} se puede utilizar para definir un potencial adimensional, el cual define la forma de ambas componentes. Este potencial $\Omega$ se refiere al \textbf{potencial modificado de Kopal}, introducido en \citetbookchapter{kopal_close_binary_systems_1959}{III.1}. Este potencial se relaciona con $\psi$ por la siguiente ecuación:
+El potencial efectivo en la \refequation{ecuacionPotencialEfectivoFinal} se
+puede utilizar para definir un potencial adimensional, el cual define la forma
+de ambas componentes. Este potencial $\Omega$ se refiere al \textbf{potencial
+modificado de Kopal}, introducido por
+\citetbookchapter{kopal_close_binary_systems_1959}{III.1}. Este potencial se
+relaciona con $\psi$ por la siguiente ecuación:
 
 \begin{eqfloat}[!ht]
 	\centering
@@ -347,7 +352,7 @@ $\Omega$ definido hasta ahora solo puede ser aplicado a aquellos sistemas
 binarios cuya órbita es circular y sincrónica. Esto excluye los sistemas con
 órbitas excéntricas y/o asincrónicas, incluyendo sistemas binarios en contacto
 cuyas propiedades no pueden ser adecuadamente modeladas en este paradigma
-\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}.
+[\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}].
 \citeyearparen{wilson_eccentric_1979} generaliza el modelo de Roche a este tipo de
 órbitas, llegando a la siguiente expresión:
 
@@ -401,7 +406,7 @@ Donde $\Omega_{\textrm{pol}}$ es el valor del potencial modificado de Roche en
 el polo de la estrella, y $\varrho_{\textrm{pol}}$ es el radio normalizado al
 semieje mayor en el polo de la estrella. Usando esta expresión se puede
 parametrizar la forma y tamaño de la estrella utilizando un solo valor para el
-potencial; esto es gracias a la siguiente relación dada en
+potencial; esto es gracias a la siguiente relación dada por
 \citetbooksection{phoebeScientificReference}{3.1}:
 
 \begin{eqfloat}[!ht]
