--- a/Muestra/Secciones/Catalogos.tex
+++ b/Muestra/Secciones/Catalogos.tex
@@ -1,6 +1,6 @@
 \chapter{Catálogos}
 
-\section{Gaia} \label{muestra:sec:gaia}
+\section{Gaia} \label{muestra:gaia}
 
 Originalmente denominado como GAIA, la misión \textbf{Gaia} fue lanzada por
 la \textbf{Agencia Espacial Europea} (\textbf{ESA}) el 19 de Diciembre del 2013, con el
