--- a/Tesis.tex
+++ b/Tesis.tex
@@ -206,6 +206,7 @@
 \newcommand{\gaia}{\gaiaNoSpace \space}
 \newcommand{\quotes}[1]{``#1''}
 \newcommand{\code}[1]{\texttt{#1}}
+\newcommand{\Angstrom}{\textup{~\AA}}
 
 \newcommand{\citeyearparen}[1]{\textcite{#1}}
 \newcommand{\citetbookchapter}[2]{\textcite[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
@@ -428,6 +429,12 @@ Data Processing and Analysis Consortium (DPAC,
 \url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}). Funding for the DPAC
 has been provided by national institutions, in particular the institutions
 participating in the {\it Gaia} Multilateral Agreement.
+
+This job has made use of the Python package GaiaXPy, developed and maintained by
+members of the Gaia Data Processing and Analysis Consortium
+(\href{https://www.cosmos.esa.int/web/gaia/dpac/consortium}{DPAC}), and in
+particular, Coordination Unit 5 (CU5), and the Data Processing Centre located at
+the Institute of Astronomy, Cambridge, UK (DPCI).
 
 Based on observations obtained with the Samuel Oschin Telescope 48-inch and the 60-inch Telescope at the Palomar
 Observatory as part of the Zwicky Transient Facility project. ZTF is supported by the National Science Foundation under Grants
